realize conditinal varibale

--- a/semaphore/Makefile
+++ b/semaphore/Makefile
@@ -5,11 +5,15 @@ SHELL := /bin/bash
 CFLAGS = -Wall -g -std=c99 
 LIBS = -lrt -pthread
 
-all: clean semaphore
+all: clean semaphore conditional
 
 semaphore: 
 	if [ ! -d "${BINDIR}" ]; then mkdir "${BINDIR}"; fi
 	gcc -o ${BINDIR}/semaphore.o semaphore.c $(CFLAGS) $(LIBS)
+
+conditional:
+	if [ ! -d "${BINDIR}" ]; then mkdir "${BINDIR}"; fi
+	gcc -o ${BINDIR}/conditional.o conditionalVariable.c $(CFLAGS) $(LIBS)
 
 clean:
 	rm -r ${BINDIR}
