fix register only

--- a/memory_hierarchy/Makefile
+++ b/memory_hierarchy/Makefile
@@ -3,17 +3,17 @@ BINDIR=bin
 SHELL := /bin/bash
 .SUFFIXES: .c
 CFLAGS = -Wall -g -std=c99
-REGFLAGS = -fPIC -shared
+CACHEFLAGS = -O0
 
 all: clean cache register
 
 cache: 
 	if [ ! -d "${BINDIR}" ]; then mkdir "${BINDIR}"; fi
-	gcc -o ${BINDIR}/cache_only.o cache_only.c $(CFLAGS)
+	gcc -o ${BINDIR}/cache_only.o cache_only.c $(CFLAGS) $(CACHEFLAGS)
 
 register: 
 	if [ ! -d "${BINDIR}" ]; then mkdir "${BINDIR}"; fi
-	gcc  $(REGFLAGS) register_only.c $(CFLAGS) -o ${BINDIR}/register_only.o 
+	gcc register_only.c $(CFLAGS) -o ${BINDIR}/register_only.o 
 
 clean:
 	if [ -d "${BINDIR}" ]; then rm -r ${BINDIR}; fi
