--- a/memory_hierarchy/Makefile
+++ b/memory_hierarchy/Makefile
@@ -4,8 +4,8 @@ SHELL := /bin/bash
 .SUFFIXES: .c
 REG_CFLAGS = -Wall -g -std=c99
 CACHE_CFLAGS = -Wall -g -std=c99 -O0
-DRAM_CFLAGS = -Wall
-CC = gcc -Wall
+CC := gcc
+EXTRA_CFLAGS := -Wall -O0
 KDIR := /lib/modules/$(shell uname -r)/build
 PWD := $(shell pwd)
 obj-m := dram_only.o
@@ -19,14 +19,14 @@ cache:
 
 register: 
 	if [ ! -d "${BINDIR}" ]; then mkdir "${BINDIR}"; fi
-	gcc register_only.c $(REG_CFLAGS) -o ${BINDIR}/register_only.o 
+	gcc -o ${BINDIR}/register_only.o register_only.c $(REG_CFLAGS) 
 
 dram:
 	if [ ! -d "${BINDIR}" ]; then mkdir "${BINDIR}"; fi
-	$(MAKE) $(DRAM_CFLAGS) -C $(KDIR) M=$(PWD) modules
+	$(MAKE) CC=$(CC) -C $(KDIR) M=$(PWD) modules
 
 clean:
 	if [ -d "${BINDIR}" ]; then rm -r ${BINDIR}; fi
-	$(MAKE) $(DRAM_CFLAGS) -C $(KDIR) M=$(PWD) clean
+	$(MAKE) CC=$(CC) -C $(KDIR) M=$(PWD) clean
 	if [ -e "dram_only.o.ur-safe" ]; then rm dram_only.o.ur-safe; fi
 	
